@@ -54,9 +54,7 @@ intptr_t KMutex::lock(Thread* thread, int timeoutTick /* = 0 */)
             // todo
             g_scheduler->WaitEvent2(thread, MEvent::SLEEP, MEvent::MUTEX_UNLOCKED);
         }
-        g_scheduler->SwitchToNext();
-
-        /* not reached */
+        return Scheduler::YIELD;
     }
     exit_kernel_lock_mode();
 
@@ -81,27 +79,6 @@ intptr_t KMutex::tryLock(Thread* thread)
     return result;
 }
 
-intptr_t KMutex::unlockNoSwitchNext()
-{
-    /* not locked */
-    if (!isLocked()) {
-        return M_OK;
-    }
-
-    enter_kernel_lock_mode();
-
-    g_currentThread->thread->setWaitingMutex(NULL);
-
-    if (waitList_ ->size() == 0) {
-        owner_ = NULL;
-    } else {
-        owner_ = waitList_->removeAt(0);
-        g_scheduler->EventComes(owner_, MEvent::MUTEX_UNLOCKED);
-    }
-    exit_kernel_lock_mode();
-    return M_OK;
-}
-
 intptr_t KMutex::unlock()
 {
     /* not locked */
@@ -118,9 +95,7 @@ intptr_t KMutex::unlock()
     } else {
         owner_ = waitList_->removeAt(0);
         g_scheduler->EventComes(owner_, MEvent::MUTEX_UNLOCKED);
-        g_scheduler->SwitchToNext();
-
-        /* not reached */
+        return Scheduler::YIELD;
     }
     exit_kernel_lock_mode();
     return M_OK;
