@@ -82,6 +82,12 @@ enum
        Indicates a bad condition_id is spcified.
     */
     M_BAD_CONDITION_ID       ,
+    /*
+       constant: M_BAD_THREAD_ID
+
+       Indicates a bad thread_id is spcified.
+    */
+    M_BAD_THREAD_ID       ,
     IDM_OBJECT_NOT_FOUND , // Error should be negative
     IDM_SECURITY_ERROR   ,
     IDM_INVALID_TYPE
